# Experimentor

./: README.md  pyproject.toml
examples/: customize_track_log.py  experiment_runner_examples.py  print_argument_demo.py  skip_if_log_exists.py  track_log_demo.py
experimentor/: __init__.py  __main__.py  cli.py  configure_production.py  const.py  experiment_runner.py  experimentor.py  track_log.py
